--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,12 +1,12 @@
 footer {
-  border-top: 1px solid #ddd;
   margin-top: 40px;
   padding: 20px;
+  background: #eee;
 }
 
 footer a {
-  color: #949494;
-  font-size: 12px;
+  color: #959595;
+  font-size: 14px;
 }
 
 footer ul {
